--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[platformio]
+default_envs = rpi_serial
+
+[env]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+
+[env:rpi_serial]
 monitor_speed = 115200
+upload_port = /dev/ttyUSB*
+monitor_port = /dev/ttyUSB*
+
+[env:ota]
+upload_protocol = espota
+upload_port = 192.168.44.206
+#upload_port = IP_ADDRESS_HERE or mDNS_NAME.local
