Compiles after sigificant changes for bluetooth

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,65 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = esp32doit-devkit-v1
+
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+build_flags =
+    -DOTA_HANDLER 
+    -DMODE_STA
+    -DPROTOCOL_TCP
+    -DNUM_COM=1
+    -DDEBUG_COM=0
+    -DUART_BAUD0=115200
+    -DSERIAL_PARAM0=SERIAL_8N1
+    -DSERIAL0_RXPIN=21
+    -DSERIAL0_TXPIN=1 
+    -DSERIAL0_TCP_PORT=8880 
+    -DUART_BAUD1=115200
+
+[env:esp32doit-openbsd]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_flags =
+    -DOTA_HANDLER 
+    -DMODE_STA
+    -DPROTOCOL_TCP
+    -DNUM_COM=3
+    -DDEBUG_COM=0
+    -DUART_BAUD0=115200
+    -DSERIAL_PARAM0=SERIAL_8N1
+    -DSERIAL0_RXPIN=21
+    -DSERIAL0_TXPIN=1 
+    -DSERIAL0_TCP_PORT=8880 
+    -DUART_BAUD1=115200
+    -DSERIAL_PARAM1=SERIAL_8N1
+    -DSERIAL1_RXPIN=16
+    -DSERIAL1_TXPIN=17
+    -DSERIAL1_TCP_PORT=8881
+    -DUART_BAUD2=9600
+    -DSERIAL_PARAM2=SERIAL_8N1
+    -DSERIAL2_RXPIN=15
+    -DSERIAL2_TXPIN=4
+    -DSERIAL2_TCP_PORT=8882
+
+[env:esp32doit-multimeter]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_flags =
+    -DBLUETOOTH
+    -DNUM_COM=1
+    -DDEBUG_COM=0
+    -DUART_BAUD0=19200
+    -DSERIAL_PARAM0=SERIAL_8N1
+    -DSERIAL0_RXPIN=21
+    -DSERIAL0_TXPIN=1 
+    -DSERIAL0_TCP_PORT=8880 
